--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.4.1",
+    "axios": "^1.7.9",
+    "chalk": "^4.1.2",
     "commander": "^13.1.0",
     "download-git-repo": "^3.0.2",
-    "inquirer": "^12.4.1"
+    "inquirer": "^8.2.6",
+    "ora": "^5.4.1"
   }
 }
